# mailaka

./: .gitignore  ARCHITECTURE.md  INTERACTIVE_MODE.md  LICENSE  README.md  generate_screenshots.py  go.mod  install.ps1  install.sh  package.json  pyproject.toml  run.sh
.github/workflows/: build.yml
dashboard/: dashboard.js  index.html  server.py  styles.css
internal/adapters/: localstorage.go  mailtm.go  utils.go
internal/config/: config.go
internal/domain/: inbox.go  message.go
internal/driven/: service.go
internal/ports/: api.go
mailaka/: __init__.py  __main__.py  cli.py  interactive.py
mailaka/commands/: __init__.py  attachments.py  delete.py  download.py  inbox.py  list_inboxes.py  new.py  read.py  status.py
mailaka/core/: __init__.py  models.py  provider.py  storage.py
mailaka/utils/: __init__.py  config.py  display.py  errors.py
scripts/: install.js
tests/: __init__.py  test_commands.py  test_providers.py
