[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailaka"
version = "0.1"
description = "Mailaka CLI"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
mailaka = "mailaka.cli:main"

[tool.setuptools.packages.find]
where = ["."]
